begin Restaurante/Create

--- a/Restaurante_APP/Restaurante_APP.csproj
+++ b/Restaurante_APP/Restaurante_APP.csproj
@@ -233,6 +233,7 @@
     <Content Include="Views\Restaurante\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Menu\Index.cshtml" />
+    <Content Include="Views\Restaurante\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
