--- a/Restaurante_APP/Restaurante_APP.csproj
+++ b/Restaurante_APP/Restaurante_APP.csproj
@@ -236,6 +236,7 @@
     <Content Include="Views\Restaurante\Create.cshtml" />
     <Content Include="Views\Restaurante\Read.cshtml" />
     <Content Include="Views\Restaurante\Update.cshtml" />
+    <Content Include="Views\Menu\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
