--- a/Restaurante_APP/Restaurante_APP.csproj
+++ b/Restaurante_APP/Restaurante_APP.csproj
@@ -232,11 +232,13 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Restaurante\Index.cshtml" />
     <Content Include="Views\Home\Read.cshtml" />
-    <Content Include="Views\Menu\Read.cshtml" />
+    <Content Include="Views\Menu\Read-id.cshtml" />
     <Content Include="Views\Restaurante\Create.cshtml" />
     <Content Include="Views\Restaurante\Read.cshtml" />
     <Content Include="Views\Restaurante\Update.cshtml" />
     <Content Include="Views\Menu\Create.cshtml" />
+    <Content Include="Views\Menu\Update.cshtml" />
+    <Content Include="Views\Menu\Read-name.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
